WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226715
[GStreamer] Fix clang TSA warning in AbortableTaskQueue
https://bugs.webkit.org/show_bug.cgi?id=226715
Summary
[GStreamer] Fix clang TSA warning in AbortableTaskQueue
Alicia Boya García
Reported
2021-06-07 01:49:26 PDT
Fixes a clang thread safety analysis warning in AbortableTaskQueue.
Attachments
Patch
(1.25 KB, patch)
2021-06-07 01:50 PDT
,
Alicia Boya García
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alicia Boya García
Comment 1
2021-06-07 01:50:06 PDT
Created
attachment 430726
[details]
Patch
Xabier Rodríguez Calvar
Comment 2
2021-06-07 04:28:30 PDT
lgtm
EWS
Comment 3
2021-06-07 04:40:11 PDT
Committed
r278554
(
238552@main
): <
https://commits.webkit.org/238552@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 430726
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug