[GStreamer] Fix clang TSA warning in AbortableTaskQueue https://bugs.webkit.org/show_bug.cgi?id=226715

Reviewed by Michael Catanzaro.

Fixes a clang thread safety analysis warning in AbortableTaskQueue.

* platform/AbortableTaskQueue.h:


Canonical link: https://commits.webkit.org/238552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278554 268f45cc-cd09-0410-ab3c-d52691b4dbfc